--- a/styles/_laws.scss
+++ b/styles/_laws.scss
@@ -1,3 +1,8 @@
+.outer-container{
+  @include outer-container(12);
+  width: auto;
+}
+
 .laws li {
   background-color: rgba(255, 255, 255, .9);
   height: 200px;
