--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -21,22 +21,25 @@
   </nav>
 </div>
 
-<ul>
-  <li class="subtitle">Laws</li>
-</ul>
+<div class="outer-container">
 
-<ul class="laws">
-  <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
-  <li>Bicycles should be in the bike lane unless there is an obstruction. </li>
-  <li>Bicycles are allowed on roadways where lanes don’t exist, but must ride as far right as possible, unless another lane provides the only path for a cyclist to continue on their route.</li>
-  <li>Bicycles riding at night must have a white headlight and a red rear reflector.</li>
-  <li>Cyclists must indicate turns.</li>
-</ul>
-<ul>
-  <li class="subtitle">Suggestions</li>
-</ul>
+  <ul>
+    <li class="subtitle">Laws</li>
+  </ul>
 
-<ul class="ideas">
-  <li>Helmets are not required, but prevent major brain damage and death.</li>
-  <li>When wearing headphones, only one ear is suggested. Hearing is the strongest advantage cyclists have above cars.</li>
-</ul>
+  <ul class="laws">
+    <li>Bicycles in bike lanes have the right of way: Cars should not block your lane, even when turning at intersections.</li>
+    <li>Bicycles should be in the bike lane unless there is an obstruction. </li>
+    <li>Bicycles are allowed on roadways where lanes don’t exist, but must ride as far right as possible, unless another lane provides the only path for a cyclist to continue on their route.</li>
+    <li>Bicycles riding at night must have a white headlight and a red rear reflector.</li>
+    <li>Cyclists must indicate turns.</li>
+  </ul>
+  <ul>
+    <li class="subtitle">Suggestions</li>
+  </ul>
+
+  <ul class="ideas">
+    <li>Helmets are not required, but prevent major brain damage and death.</li>
+    <li>When wearing headphones, only one ear is suggested. Hearing is the strongest advantage cyclists have above cars.</li>
+  </ul>
+</div>
