Fix deployed bugs on gh-pages

--- a/styles/_login.scss
+++ b/styles/_login.scss
@@ -10,7 +10,7 @@
 
 /*background image from Justin Younger*/
   html {
-    background: url('/images/greyscale-bike.png') no-repeat center center fixed;
+    background: url('../../images/greyscale-bike.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -138,7 +138,7 @@
 @media (max-width: 839px) and (min-width: 500px) {
 
   html {
-    background: url('/images/greyscale-bike.png') no-repeat center center fixed;
+    background: url('../../images/greyscale-bike.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -267,7 +267,7 @@
 
 @media (max-width: 499px) {
   html {
-    background: url('/images/greyscale-bike.png') no-repeat center center fixed;
+    background: url('../../images/greyscale-bike.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
