--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -21,7 +21,7 @@
   </nav>
 </div>
 
-<div class="outer-container">
+<div class="laws-outer-container">
 
   <ul>
     <li class="subtitle">Laws</li>
@@ -34,7 +34,7 @@
     <li>Bicycles riding at night must have a white headlight and a red rear reflector.</li>
     <li>Cyclists must indicate turns.</li>
   </ul>
-  
+
   <ul>
     <li class="subtitle">Suggestions</li>
   </ul>
