--- a/styles/_brl.scss
+++ b/styles/_brl.scss
@@ -2,21 +2,21 @@
 
   .add-rack-div {
     @include outer-container(12);
-    @include span-columns(3);
-    @include shift(4);
-    text-align: center;
-    display: inline-block;
   }
 
   .show-add-brl {
+    @include outer-container(12);
+    @include span-columns(2);
+    @include shift(5);
     margin-bottom: .5em;
   }
 
   .add-brl-form {
+    @include outer-container(12);
+    @include span-columns(3);
+    @include shift(4.5);
     display: inline-block;
     background-color: rgba(255, 255, 255, .9);
-    width: 50%;
-    height: 50%;
     padding: 1em;
     font-size: 14px;
     text-align: center;
