--- a/styles/_login.scss
+++ b/styles/_login.scss
@@ -11,6 +11,7 @@
 /*background image from Justin Younger*/
   html {
     background: url('../../images/greyscale-bike.png') no-repeat center center fixed;
+    background-color: rgbA(255,255,255, .2);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
