--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,7 @@ $base-background-color: $very-light-gray;
 @import 'header';
 @import 'link-styles';
 @import 'button-styles';
+@import 'map';
 
 body {
   font-family: $base-font-family;
@@ -86,42 +87,6 @@ button:hover {
 
 button:active{
   background-color: rgba(255, 201, 121, 1);
-}
-
-@media (min-width: 840px) {
-
-  .map{
-    @include span-columns(10);
-    @include shift(1);
-    width: 1000px;
-    height: 500px;
-    margin-bottom: 1em;
-  }
-}
-
-@media (max-width: 839px) and (min-width: 500px) {
-
-  .map{
-    @include outer-container;
-    @include span-columns(10);
-    @include shift(1);
-    width: 500px;
-    height: 500px;
-    margin-bottom: 1em;
-  }
-}
-
-@media (max-width: 499px) {
-
-  .map{
-    @include outer-container;
-    @include span-columns(10);
-    @include shift(1);
-    display: inline-block;
-    width: 400px;
-    height: 500px;
-    margin-bottom: 1em;
-  }
 }
 
 .loading{
