--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -1,36 +1,37 @@
-<div class="notes-page-container">
+<div class="full-outer-container">
+  <div class="notes-page-container">
 
-  <div class="full-heading">
-    <nav class="cl-effect-21">
-      <h1><a href="http://localhost:9000/#notes"><span>Public Notes</span></a></h1>
-      <ul class="header">
-        <li>
-          <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
-        </li>
-        <li>
-          <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
-        </li>
-        <li>
-          <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
-        </li>
-        <li>
-          <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
-        </li>
-        <li>
-          <a href="#" class="logout-button"><span>Logout</span></a>
-        </li>
-      </ul>
-    </nav>
+    <div class="full-heading">
+      <nav class="cl-effect-21">
+        <h1><a href="http://localhost:9000/#notes"><span>Public Notes</span></a></h1>
+        <ul class="header">
+          <li>
+            <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+          </li>
+          <li>
+            <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+          </li>
+          <li>
+            <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
+          </li>
+          <li>
+            <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+          </li>
+          <li>
+            <a href="#" class="logout-button"><span>Logout</span></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="add-notes-div">
+      <button class="add-notes-button">Add notes here</button>
+      <form class="notes-add-form hidden pure-form pure-form-stacked">
+          <input class="notes-title-add"type="text" placeholder="title">
+          <textarea class="notes-content-add" placeholder="content" rows="10"></textarea>
+          <input class="notes-reset-add" type="reset" placeholder="reset">
+          <input class="notes-save-add" type="submit" placeholder="save">
+      </form>
+    </div>
   </div>
-
-  <div class="add-notes-div">
-    <button class="add-notes-button">Add notes here</button>
-    <form class="notes-add-form hidden pure-form pure-form-stacked">
-        <input class="notes-title-add"type="text" placeholder="title">
-        <textarea class="notes-content-add" placeholder="content" rows="10"></textarea>
-        <input class="notes-reset-add" type="reset" placeholder="reset">
-        <input class="notes-save-add" type="submit" placeholder="save">
-    </form>
-  </div>
-
 </div>
