--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -1,21 +1,21 @@
   <div class="full-heading">
     <nav class="cl-effect-21">
-      <h1><a href="http://localhost:9000/#rental"><span>Bicycle rental locations</span></a></h1>
+      <h1><a href="/#rental"><span>Bicycle rental locations</span></a></h1>
       <ul class="header">
         <li>
-          <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+          <a href="/#brl"><span>Bike Rack Locations</span></a>
         </li>
         <li>
           <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
         </li>
         <li>
-          <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+          <a href="/#laws"><span>Laws and Safety</span></a>
         </li>
         <li>
-          <a href="http://localhost:9000/#notes"><span>Notes</span></a>
+          <a href="/#notes"><span>Notes</span></a>
         </li>
         <li>
-          <a class="logout-button"><span>Logout</span></a>
+          <a href="#" class="logout-button"><span>Logout</span></a>
         </li>
       </ul>
     </nav>
