--- a/templates/brl.hbs
+++ b/templates/brl.hbs
@@ -3,16 +3,16 @@
       <h1><a href="/#brl"><span>Bike rack locations</span></a></h1>
       <ul class="header">
         <li>
-          <a class="rental-bikes-link" href="/#rental"><span>Rental Bike Locations</span></a>
+          <a class="rental-bikes-link" href="#rental"><span>Rental Bike Locations</span></a>
         </li>
         <li>
           <a class="bCycle-link" href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
         </li>
         <li>
-          <a class="laws-link" href="/#laws"><span>Laws and Safety</span></a>
+          <a class="laws-link" href="#laws"><span>Laws and Safety</span></a>
         </li>
         <li>
-          <a class="notes-link" href="/#notes"><span>Notes</span></a>
+          <a class="notes-link" href="#notes"><span>Notes</span></a>
         </li>
         <li>
           <a href="#" class="logout-button"><span>Logout</span></a>
