--- a/templates/rental.hbs
+++ b/templates/rental.hbs
@@ -3,16 +3,16 @@
       <h1><a href="/#rental"><span>Bicycle rental locations</span></a></h1>
       <ul class="header">
         <li>
-          <a href="/#brl"><span>Bike Rack Locations</span></a>
+          <a href="#brl"><span>Bike Rack Locations</span></a>
         </li>
         <li>
           <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
         </li>
         <li>
-          <a href="/#laws"><span>Laws and Safety</span></a>
+          <a href="#laws"><span>Laws and Safety</span></a>
         </li>
         <li>
-          <a href="/#notes"><span>Notes</span></a>
+          <a href="#notes"><span>Notes</span></a>
         </li>
         <li>
           <a href="#" class="logout-button"><span>Logout</span></a>
