--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -44,4 +44,18 @@
 
 @media (max-width: 499px) {
 
+  .header{
+    @include span-columns(12);
+    text-align: center;
+    vertical-align: middle;
+    background-color: rgba(55, 54, 56, .8);
+  }
+
+  .header link {
+    height: 2em;
+    vertical-align: middle;
+    font-size: 12px;
+    padding: .5em;
+  }
+
 }
