changed map responsiveness

--- a/styles/_map.scss
+++ b/styles/_map.scss
@@ -1,9 +1,7 @@
-@media (min-width: 840px) {
+/* @media (min-width: 840px) {
 
   .map{
     @include outer-container;
-/*     @include span-columns(11);
-@include shift(.5); */
     height: 500px;
     margin-bottom: 1em;
     border: 5px solid white;
@@ -16,10 +14,9 @@
 
   .map{
     @include outer-container;
-/*     @include span-columns(12);
- */    height: 500px;
- margin: auto;
-
+    @include span-columns(12);
+    display: inline-block;
+    height: 500px;
     margin-bottom: 1em;
     border: 5px solid white;
   }
@@ -29,8 +26,48 @@
 
   .map{
     @include outer-container;
+    margin: 0 auto;
     display: inline-block;
-    margin: auto;
+    height: 500px;
+    margin-bottom: 1em;
+    border: 5px solid white;
+
+  }
+}
+ */
+
+@media (min-width: 840px) {
+
+  .map{
+    @include outer-container;
+    margin-left: 1em;
+    margin-right: 1em;
+    height: 500px;
+    margin-bottom: 1em;
+    border: 5px solid white;
+  }
+}
+
+@media (max-width: 839px) and (min-width: 500px) {
+
+  .map{
+    @include outer-container;
+    margin-left: 1em;
+    margin-right: 1em;
+    height: 500px;
+    margin-bottom: 1em;
+    border: 5px solid white;
+  }
+}
+
+@media (max-width: 499px) {
+
+  .map{
+    @include outer-container;
+    @include span-columns(12);
+    margin-left: 1em;
+    margin-right: 1em;
+    display: inline-block;
     height: 500px;
     margin-bottom: 1em;
     border: 5px solid white;
