fixed all links

--- a/templates/laws.hbs
+++ b/templates/laws.hbs
@@ -3,16 +3,16 @@
     <nav class="cl-effect-21">
       <ul class="header">
         <li>
-          <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+          <a href="#brl"><span>Bike Rack Locations</span></a>
         </li>
         <li>
-          <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+          <a href="#rental"><span>Rental Bike Locations</span></a>
         </li>
         <li>
           <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
         </li>
         <li>
-          <a href="http://localhost:9000/#notes"><span>Notes</span></a>
+          <a href="#notes"><span>Notes</span></a>
         </li>
         <li>
           <a href="#" class="logout-button"><span>Logout</span></a>
