--- a/templates/notes-list.hbs
+++ b/templates/notes-list.hbs
@@ -3,19 +3,19 @@
 
     <div class="full-heading">
       <nav class="cl-effect-21">
-        <h1><a href="http://localhost:9000/#notes"><span>Public Notes</span></a></h1>
+        <h1><a href="#notes"><span>Public Notes</span></a></h1>
         <ul class="header">
           <li>
-            <a href="http://localhost:9000/#brl"><span>Bike Rack Locations</span></a>
+            <a href="#brl"><span>Bike Rack Locations</span></a>
           </li>
           <li>
-            <a href="http://localhost:9000/#rental"><span>Rental Bike Locations</span></a>
+            <a href="#rental"><span>Rental Bike Locations</span></a>
           </li>
           <li>
             <a href="https://greenville.bcycle.com/"><span>Find bCycles here</span></a>
           </li>
           <li>
-            <a href="http://localhost:9000/#laws"><span>Laws and Safety</span></a>
+            <a href="#laws"><span>Laws and Safety</span></a>
           </li>
           <li>
             <a href="#" class="logout-button"><span>Logout</span></a>
