--- a/styles/_map.scss
+++ b/styles/_map.scss
@@ -6,7 +6,7 @@
     margin-right: 1em;
     height: 500px;
     margin-bottom: 1em;
-    margin: 0 auto;
+    margin: auto;
     border: 5px solid white;
   }
 }
@@ -34,6 +34,6 @@
     height: 500px;
     margin-bottom: 1em;
     border: 5px solid white;
-
+    margin: auto;
   }
 }
